[package]
name = "hello"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4.38", features = ["serde"] }
criterion = { version = "0.5.1", features = ["real_blackbox", "html_reports"] }
polars = { version = "0.42.0", features = ["json"] }
serde = { version = "1.0.209", features = ["derive"] }
serde_json = "1.0.127"

[[bench]]
name = "benchmark"
harness = false
